<?xml version="1.0" encoding="utf-8"?>

<FrameLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:id="@+id/loginFragment"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".form.ReeUsersFragment"
    >


    <RelativeLayout
        android:id="@+id/relaLayout"
        android:layout_width="match_parent"
        android:layout_height="515dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/reecycle_image"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/imagemReecycle"
            android:src="@drawable/reecycle" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutInputText"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reecycle_image"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/hintEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/LayoutInputPass"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layoutInputText"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/hintSenha"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnEntrar"
            style="@style/ShapeAppearance.MyTheme.SmallComponent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/LayoutInputPass"
            android:layout_centerHorizontal="false"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/background"
            android:text="@string/Entrar"
            android:textColor="@color/background"
            android:textSize="24sp"
            app:backgroundTint="@color/colorPrimary" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relaLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/relaLayout"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/label1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="16dp"
            android:text="@string/labelCad"
            android:textSize="18sp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.444" />

        <TextView
            android:id="@+id/tvCad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/label1"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:focusable="true"
            android:text="@string/paraCadastrar"
            android:gravity="center"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.242"
            app:layout_constraintStart_toEndOf="@+id/label1" />


    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>